crates/vexor-compiler/tests/golden/error/input/duplicate.vx
val r = 100
-- duplicate variable r
val r = 200
val c = Circle(r)
export c
